--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -17,11 +17,12 @@ status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   # cname: status.bitpushr.net
+  theme:  dark
   baseUrl: /upptime
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
+  logoUrl: https://i.imgur.com/zzAIHIT.png
+  name: bitpushr's status website
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is bitpushrs status page
+  introMessage: This is bitpushr's status page
   navbar:
     - title: Status
       href: /
