--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -17,7 +17,7 @@ status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   # cname: status.bitpushr.net
-  theme:  dark
+  theme:  night
   baseUrl: /upptime
   logoUrl: https://i.imgur.com/zzAIHIT.png
   name: bitpushr's status website
