--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -9,7 +9,7 @@ sites:
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: https://bitpushr.github.io/upptime/
+  # cname: https://bitpushr.github.io/upptime/
   theme: night
   baseUrl: /upptime
   logoUrl: https://i.imgur.com/zzAIHIT.png
